--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,7 @@
 
 :root {
   --header-height: 80px;   /* oder deine exakte Höhe */
-  --footer-height: 100px;   /* oder deine exakte Höhe */
+   --footer-height: clamp(60px, 8vh, 120px);
 }
 
 html, body {
@@ -878,5 +878,94 @@ body {
 
   .team-points {
     font-size: 2.6rem;
+  }
+}
+
+#scoreboard-wrapper {
+  position: relative;
+}
+
+#scoreboard {
+  position: relative;
+  z-index: 1;
+}
+
+.mask-left,
+.mask-right {
+  z-index: 5; /* höher als Punkte & Text */
+}
+
+@media (min-width: 1600px) {
+
+  .row:not(.rank-1):not(.rank-2):not(.rank-3) .team-name {
+    font-size: clamp(2rem, 2.6vw, 3rem);
+  }
+
+  .row:not(.rank-1):not(.rank-2):not(.rank-3) .team-points {
+    font-size: clamp(1.8rem, 2.4vw, 2.8rem);
+  }
+}
+
+@media (max-width: 768px) {
+
+  .mask-left,
+  .mask-right {
+    display: none;
+  }
+
+  .team-name {
+    font-size: clamp(1.2rem, 5vw, 1.7rem);
+  }
+
+  .team-points {
+    font-size: clamp(1rem, 4.5vw, 1.4rem);
+  }
+}
+
+.mask-left,
+.mask-right {
+  top: -5vh;
+  bottom: -5vh;
+}
+.mask-left,
+.mask-right {
+  position: absolute;
+}
+@media (max-width: 768px) {
+  .mask-left,
+  .mask-right {
+    display: none;
+  }
+}
+@media (min-width: 1600px) {
+  .mask-left,
+  .mask-right {
+    top: -8vh;
+    bottom: -8vh;
+  }
+
+}
+footer {
+  height: var(--footer-height);
+}
+
+.mask-left,
+.mask-right {
+  position: absolute;
+  top: 0;
+  bottom: var(--footer-height);
+}
+
+@media (min-width: 1600px) {
+  .mask-left,
+  .mask-right {
+    bottom: calc(var(--footer-height) - 2vh);
+  }
+}
+
+@media (max-width: 768px) {
+  .mask-left,
+  .mask-right {
+    display: none;
   }
 }
