Fix: CSS Anpassungen

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -170,6 +170,10 @@ html, body {
   z-index: 2;
 }
 
+#scoreboardMask {
+  top: 70px;      /* Abstand vom Header */
+  bottom: 90px;   /* Abstand zum Footer */
+}
 
 
 /* === Zeilenbasis === */
