--- a/public/css/style.css
+++ b/public/css/style.css
@@ -250,6 +250,8 @@ html, body {
   opacity: 0.8;
   margin-left: 6px;
   line-height: 1;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 /* PlÃ¤tze 4+ kleiner erzwingen */
@@ -283,7 +285,7 @@ html, body {
   text-align: left;
   padding-left: 40px;
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap !important;
   gap: 6px 14px;
 }
 
@@ -531,7 +533,13 @@ header h1{margin:0;font-size:18px;letter-spacing:0.4px;opacity:0.95}
 .row.small .drinks{font-size:calc(0.25 * var(--row-small))}
 .drink-item{display:inline-flex;gap:8px;align-items:center;white-space:nowrap}
 .drink-item img{height:calc(0.18 * var(--row-big)); width:auto}
-.row.small .drink-item img{height:calc(0.35 * var(--row-small))}  
+/*.row.small .drink-item img{height:calc(0.35 * var(--row-small))} */
+.col.name {
+  display: flex;
+  align-items: center;
+  min-height: 100%;
+}
+
 
 /* separator dot */
 .mid-dot{color:rgba(200,200,200,1.0);margin:0 6px;align-self:center;font-size:calc(0.25 * var(--row-big))}
