--- a/public/css/style.css
+++ b/public/css/style.css
@@ -146,6 +146,7 @@ html, body {
   position: absolute;   /* NICHT fixed */
   top: 0;
   bottom: 0;
+  margin-top: -8px;
 
   display: flex;
   flex-direction: column;
@@ -170,6 +171,10 @@ html, body {
   z-index: 2;
 }
 
+#scoreboardMask {
+  top: 65px;
+  bottom: 10px;
+}
 
 
 /* === Zeilenbasis === */
@@ -329,15 +334,15 @@ html, body {
   background: #550000;
   border-top: 4px solid #aa0000;
   padding-top: 0px;
-  padding-bottom: 30px; /* Platz fÃ¼r den fixen Balken */
+  padding-bottom: 15px; /* Platz fÃ¼r den fixen Balken */
 }
 
 .punkte-title {
     text-align: center;
-    font-size: 1.0em;
+    font-size: 0.9em;
     font-weight: 600;
     color: #fff;
-    margin: 10px 0;
+    margin: 4px 0;
     position: relative;
 }
 
@@ -522,11 +527,11 @@ header h1{margin:0;font-size:18px;letter-spacing:0.4px;opacity:0.95}
 .points small{font-size:12px;opacity:0.8;vertical-align:top;margin-left:6px}
 
 /* drinks */
-.drinks{display:flex;gap:10px;align-items:center;font-size:calc(0.13 * var(--row-big));opacity:0.95;max-width:220px; overflow:hidden; white-space:nowrap; flex-wrap:nowwrap}
+.drinks{display:flex;gap:10px;align-items:center;font-size:calc(0.13 * var(--row-big));opacity:0.95;max-width:none; overflow:visible; white-space:nowrap; flex-wrap:nowrap}
 .row.small .drinks{font-size:calc(0.25 * var(--row-small))}
 .drink-item{display:inline-flex;gap:8px;align-items:center;white-space:nowrap}
 .drink-item img{height:calc(0.18 * var(--row-big)); width:auto}
-.row.small .drink-item img{height:calc(0.35 * var(--row-small))}
+.row.small .drink-item img{height:calc(0.35 * var(--row-small))}  
 
 /* separator dot */
 .mid-dot{color:rgba(200,200,200,1.0);margin:0 6px;align-self:center;font-size:calc(0.25 * var(--row-big))}
@@ -560,6 +565,10 @@ header h1{margin:0;font-size:18px;letter-spacing:0.4px;opacity:0.95}
   display: flex;
   flex-direction: column;
   will-change: transform;
+}
+
+#marqueeTrack .row {
+  margin-bottom: 2px;
 }
 
 /* >>> Center-Spot */
